# test-action-py

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TEMPLATE.md  action.yml  event.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/disabled/: ctx.py  dynamic.py  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yaml  release.yaml  test.yaml
src/: context.py  ctx.py  functions.py  main.py  retard2.py
