# Project
[project]
name = "test-action-py"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "actions-tools[github]>=0.2.0",
]

[dependency-groups]
dev = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "mypy",
    "PyGitHub",
    "pyyaml",
    "ruff",
    "yamllint",
    "types-PyYAML",
]

#Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [".venv", "venv"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*/.venv/*", "*/venv/*", "*/__pycache__/*", "*.pyc"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src"]
skip = [".venv", "venv", "node_modules", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
#ignore_missing_imports = true
exclude = [".venv", "venv", "migrations", "node_modules", "templates"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = ["migrations", "templates", ".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
